syntax = "proto3";

package greet;

option java_package = "com.proto.greet";

option java_multiple_files = true;

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

// Define the Request
message GreetRequest {
    Greeting greeting = 1;
}

// Define the Response
message GreetResponse {
    string result = 1;
}

// Define the Request
message GreetStreamRequest {
    Greeting greeting = 1;
}

// Define the Response
message GreetStreamResponse {
    string result = 1;
}

message LongGreetRequest {
    Greeting greeting = 1;
}

message LongGreetResponse {
    string result = 1;
}

message GreetEveryoneRequest {
    Greeting greeting = 1;
}

message GreetEveryoneResponse {
    string result = 1;
}

// Naming Convention: Add 'Service' in service name
service GreetService {
    // Unary Api
    // Syntax: rpc ServiceName(InputMessage) returns (ResponseMessage) {}
    rpc Greet (GreetRequest) returns (GreetResponse) {
    };

    // Server Streaming Service
    rpc GreetManyTimes (GreetStreamRequest) returns (stream GreetStreamResponse) {
    };

    // Client Streaming Service
    rpc LongGreet (stream LongGreetRequest) returns (LongGreetResponse) {
    };

    // Bi Directional
    rpc GreetEveryone (stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {
    };
}